# rag-toolkit

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  Dockerfile.notebook  Dockerfile.notebook.gpu  Makefile  README.md  benchmark.ps1  docker-compose.gpu.yml  docker-compose.yml  exp_exp.py  experiments.py  init-workspace.sh  jupyterhub_config.py  main.py  mkdocs.yml  pyproject.toml  s -ExecutionPolicy RemoteSigned) ; (& crag-toolkit.venvScriptsActivate.ps1)
analysis/: analyse_results.py  plot_latency.py
data/eval/: eval_dataset_retrieval_only.jsonl  eval_dataset_v1.jsonl
data/raw/: 01_rag_introduction.md  02_bm25_retrieval.md  03_dense_retrieval.md  04_faiss_indexing.md  05_hybrid_retrieval.md  06_chunking_strategies.md  07_embedding_models.md  08_mistral_llm.md  09_evaluation_metrics.md  10_ollama_setup.md  rag_dataset.jsonl  rag_example.py  rag_guide.md  rag_noise.txt  rag_overview.txt
docs/: api.md  cli.md  deployment.md  development.md  experiments.md  getting-started.md  gpu-experiments.md  index.md
docs/api/: embedding.md  evaluation.md  generation.md  indexing.md  ingestion.md  retrieval.md
experiments/: CHANGELOG_bugfix.md  README.md  __init__.py  paths.txt  run_all_experiments.py
experiments/adapters/: __init__.py  embedding_adapter.py  generation_adapter.py  indexing_adapter.py  retrieval_adapter.py
experiments/benchmarks/: __init__.py  base.py  cold_warm_benchmark.py  concurrency_benchmark.py  embedding_benchmark.py  generation_benchmark.py
experiments/configs/: __init__.py  default_matrix.py  settings.py
experiments/core/: benchmark_stats.py  corpus_loader.py  gpu_hardware.py  logging_setup.py  query_generator.py  resource_timeline.py  types.py
experiments/metrics/: __init__.py  faithfulness_metrics.py  overlap_metrics.py  pareto.py  retrieval_metrics.py  stability_metrics.py
experiments/reports/: __init__.py  aggregate_report.py  report_builder.py
experiments/storage/: __init__.py  results_store.py
experiments/suites/: __init__.py  _bench_shared.py  _shared.py  base.py  s01_retriever_corpus_scaling.py  s02_topk_sensitivity.py  s03_query_type_comparison.py  (+18 more)
notebooks/: 01_rag_ingestion_layer.ipynb  02_rag_embedding_layer.ipynb  03_rag_indexing_layer.ipynb  04_rag_retrieval_layer.ipynb  05_rag_generation_layer.ipynb  06_gpu_optional_benchmark.ipynb  06_rag_gpu_pipeline.ipynb  07_rag_evaluation.ipynb  notebooks_export.py
ops/: build-report.sh  gpu-smoke.sh  hf-verify.sh  hf_check_snippet.py  run-benchmarks.sh
tests/: conftest.py
(+1307 files in other folders)
